--- a/css/components/presentation/header.css
+++ b/css/components/presentation/header.css
@@ -5,12 +5,13 @@
 
 .presentation__header {
     position: fixed;
-    height: 15vh;
+    height: 12vh;
     width: 100vw;
     display: flex;
     justify-content: center;
     background: rgba(255, 255, 255, 0.8);
     backdrop-filter: saturate(120%) blur(20px);
+    box-shadow: 0px 0px 4px rgb(216, 216, 216);
     z-index: 11;
 }
 
@@ -26,28 +27,35 @@
 }
 
 .header__city {
-    color: var(--limeGreen);
-    border: 2px solid var(--limeGreen);
-    padding: 12px 18px;
-    border-radius: 24px;
-    transition: color .3s, background-color .3s;
+    color: var(--orange);
+    transition: color .15s;
 }
 
 .header__city:hover {
-    color: white;
-    background-color: var(--limeGreen);
+    color: var(--purple);
     cursor: pointer;
 }
 
 .header__link {
-    color: var(--limeGreen);
+    color: var(--orange);
     text-decoration: none;
+    transition: color .15s;
+}
+
+.header__link:hover {
+    color: var(--purple);
 }
 
 .header__link_phone {
-    color: var(--limeGreen);
+    color: var(--orange);
     text-decoration: none;
     font-size: 1.2em;
+    transition: color .15s;
+}
+
+.header__link_phone:hover {
+    color: var(--purple);
+    cursor: pointer;
 }
 
 .header__link-wrapper {
@@ -61,18 +69,19 @@
 }
 
 .header__btn {
-    background-color: transparent;
-    border: 2px solid var(--orange);
-    color: var(--orange);
+    background-color: var(--orange);
+    border: 2px solid transparent;
+    color: white;
     font-family: 'Rostelecom Basis';
     padding: 12px 18px;
     font-size: 1em;
     border-radius: 24px;
-    transition: color .3s, background-color .3s;
+    transition: color .3s, background-color .3s, border .3s;
 }
 
 .header__btn:hover {
-    color: white;
-    background-color: var(--orange);
+    color: var(--orange);
+    background-color: white;
     cursor: pointer;
+    border: 2px solid var(--orange);
 }
