--- a/css/components/description/header.css
+++ b/css/components/description/header.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     width: 100vw;
     align-items: center;
-    font-family: 'Rostelecom Basis';
+    font-family: 'Rostelecom Basis Regular';
 }
 
 .description__header {
