--- a/css/components/tariffs/header.css
+++ b/css/components/tariffs/header.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-family: 'Rostelecom Basis';
+    font-family: 'Rostelecom Basis Regular';
     margin-top: 5rem;
     padding-bottom: 5rem;
 }
