--- a/css/components/faq/header.css
+++ b/css/components/faq/header.css
@@ -1,6 +1,6 @@
 .faq {
     width: 100vw;
-    font-family: 'Rostelecom Basis';
+    font-family: 'Rostelecom Basis Regular';
     display: flex;
     justify-content: center;
     margin-bottom: 10rem;
