--- a/css/components/faq/main.css
+++ b/css/components/faq/main.css
@@ -4,10 +4,6 @@
     column-gap: 3rem;
 }
 
-.faq__question {
-    
-}
-
 .faq__question:hover .question__header {
     background-color: rgb(235, 235, 235);
     cursor: pointer;
@@ -61,4 +57,22 @@
     font-size: .9em;
     margin-bottom: 0.5rem;
     margin-left: 2rem;
+}
+
+@media screen and (max-width: 501px) {
+    .faq__questions {
+        grid-template-columns: 1fr;
+    }
+
+    .faq-wrapper {
+        width: 80%;
+    }
+
+    .question__title {
+        width: 80%;
+    }
+
+    .question__header {
+        width: inherit;
+    }
 }
