--- a/css/components/presentation/header.css
+++ b/css/components/presentation/header.css
@@ -1,6 +1,6 @@
 .presentation {
     background-color: white;
-    font-family: 'Rostelecom Basis', sans-serif;
+    font-family: 'Rostelecom Basis Regular', sans-serif;
 }
 
 .presentation__header {
@@ -72,7 +72,7 @@
     background-color: var(--orange);
     border: 2px solid transparent;
     color: white;
-    font-family: 'Rostelecom Basis';
+    font-family: 'Rostelecom Basis Regular';
     padding: 12px 18px;
     font-size: 1em;
     border-radius: 24px;
@@ -84,4 +84,68 @@
     background-color: white;
     cursor: pointer;
     border: 2px solid var(--orange);
+}
+
+.header__burger {
+    display: none;
+    width: 1.2rem;
+    height: 1rem;
+}
+
+.header__burger:hover {
+    cursor: pointer;
+}
+
+.header__burger span {
+    display: block;
+    width: 100%;
+    height: 2px;
+    background-color: var(--orange);
+    border-radius: 25%;
+    position: relative;
+    transition: background-color .25s;
+}
+
+.header__burger span::before {
+    content: '';
+    height: 2px;
+    width: 100%;
+    background-color: var(--orange);
+    border-radius: 25%;
+    position: absolute;
+    top: 5px;
+    transition: background-color .25s;
+}
+
+.header__burger span::after {
+    content: '';
+    height: 2px;
+    width: 100%;
+    background-color: var(--orange);
+    border-radius: 25%;
+    position: absolute;
+    top: 10px;
+    transition: background-color .25s;
+}
+
+.header__burger:hover span {
+    background-color: var(--purple);
+}
+
+.header__burger:hover span::after {
+    background-color: var(--purple);
+}
+
+.header__burger:hover span::before {
+    background-color: var(--purple);
+}
+
+@media screen and (max-width: 501px) {
+    .header__link-wrapper, .header__link, .header__city {
+        display: none;
+    }
+    
+    .header__burger {
+        display: flex;
+    }
 }
