--- a/css/components/tariffs/main.css
+++ b/css/components/tariffs/main.css
@@ -113,7 +113,7 @@
 }
 
 .tariff__btn {
-    font-family: 'Rostelecom Basis';
+    font-family: 'Rostelecom Basis Regular';
     color: gray;
     border-radius: 9px;
     border: none;
@@ -137,7 +137,7 @@
 .tariff__btn_gradient {
     background: linear-gradient(274.56deg,#ff4f12 -10.37%,#7800ff 94.74%);
     color: white;
-    font-family: 'Rostelecom Basis';
+    font-family: 'Rostelecom Basis Regular';
     border: none;
     border-radius: 9px;
     width: max-content;
@@ -171,4 +171,20 @@
     box-shadow: 0 4px 4px #00000040;
     clip-path: polygon(50% 100%,100% 80%,100% 0,0 0,0 80%);
     padding: .3rem .5rem;
+}
+
+@media screen and (max-width: 501px) {
+    .tariffs__main {
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .tariffs__tariff {
+        width: 80%;
+        margin-bottom: 2rem;
+    }
+
+    .tariffs__tariff:last-child {
+        margin-bottom: 0;
+    }
 }
