--- a/css/index.css
+++ b/css/index.css
@@ -16,7 +16,9 @@
 
 @import url(./components/footer/footer.css);
 
-@import url(./common/fonts.css);
+@import url(./components/mobile-menu/main.css);
+
+@import url(./common/fonts/fonts.css);
 
 * {
     margin: 0;
