--- a/css/components/presentation/main.css
+++ b/css/components/presentation/main.css
@@ -76,3 +76,18 @@
         padding-top: 10rem;
     }
 }
+
+@media screen and (max-width: 391px) {
+    .slide-image {
+        height: 240px;
+    }
+
+    .main__title {
+        font-size: 1.5em;
+        line-height: 2rem;
+    }
+
+    .main__subtitle {
+        font-size: 1em;
+    }
+}
