--- a/css/components/presentation/header.css
+++ b/css/components/presentation/header.css
@@ -94,21 +94,21 @@
 }
 
 .header__btn {
-    background-color: var(--orange);
+    background: linear-gradient(274.56deg,#7800ff -10.37%,#ff4f12 94.74%);
+    background-size: 300% 100%;
+    background-position: 40%;
     border: 2px solid transparent;
     color: white;
     font-family: 'Rostelecom Basis Regular';
     padding: 12px 18px;
     font-size: 1em;
     border-radius: 24px;
-    transition: color .3s, background-color .3s, border .3s;
+    transition: background-position .5s;
 }
 
 .header__btn:hover {
-    color: var(--orange);
-    background-color: white;
+    background-position: 10%;
     cursor: pointer;
-    border: 2px solid var(--orange);
 }
 
 .header__burger {
