--- a/css/components/modal-window/header.css
+++ b/css/components/modal-window/header.css
@@ -29,6 +29,10 @@
     position: relative;
 }
 
+.modal-window_request {
+    width: 45%;
+}
+
 .modal-window__cross {
     position: absolute;
     top: 15%;
@@ -193,6 +197,15 @@
     padding-left: 1rem;
 }
 
+.modal-window__input_appartment {
+    width: 43%;
+    margin-bottom: 0;
+}
+
+.modal-window__input_error {
+    box-shadow: 0 0 0.3rem red;
+}
+
 .modal-window__form-btn {
     width: 100%;
     background: linear-gradient(274.56deg,#ff4f12 -10.37%,#7800ff 94.74%);
@@ -210,4 +223,70 @@
     cursor: pointer;
     box-shadow: 0 0 0.6rem var(--purple);
     background: linear-gradient(274.56deg,#7800ff -10.37%,#ff4f12 94.74%);
+}
+
+.streets-list {
+    list-style-type: none;
+    margin-bottom: 2rem;
+    color: gray;
+    height: 10rem;
+    overflow: scroll;
+    overflow-x: hidden;
+    padding: 1rem 0.5rem;
+    margin-top: -1rem;
+}
+
+.streets-list::-webkit-scrollbar {
+    width: 10px;
+}
+
+.streets-list::-webkit-scrollbar-track {
+    background: rgb(216, 216, 216);
+    border-radius: 20px;
+}
+
+.streets-list::-webkit-scrollbar-thumb {
+    background-color: gray;
+    border-radius: 20px;
+    border: 3px solid rgb(216, 216, 216);
+}
+
+.streets-street {
+    box-shadow: 0 0 0.3rem grey;
+    border-radius: 9px;
+    padding: .5rem 0;
+    padding-left: 1rem;
+    margin-bottom: .5rem;
+    transition: color .2s, box-shadow .2s;
+}
+
+.streets-street:hover {
+    color: var(--purple);
+    box-shadow: 0 0 0.3rem var(--purple);
+    cursor: pointer;
+}
+
+.modal-window__input-wrapper {
+    display: flex;
+    align-items: center;
+    margin-bottom: 2rem;
+}
+
+.modal-window__input_checkbox+label {
+    height: max-content;
+    transition: color .2s;
+}
+
+.modal-window__input_checkbox:hover {
+    cursor: pointer;
+}
+
+.modal-window__input_checkbox+label:hover {
+    cursor: pointer;
+    color: var(--purple);
+}
+
+.modal-window__input_checkbox {
+    margin-left: 2rem;
+    margin-right: 0.5rem;
 }
