--- a/css/components/description/main.css
+++ b/css/components/description/main.css
@@ -70,8 +70,10 @@
     font-size: 1.4em;
 }
 
-.service__btn {
-    
+@media screen and (max-width: 769px) {
+    .service__features {
+        width: 90%;
+    }
 }
 
 @media screen and (max-width: 501px) {
