--- a/css/components/mobile-menu/main.css
+++ b/css/components/mobile-menu/main.css
@@ -70,6 +70,15 @@
     margin-bottom: 1.5rem;
 }
 
+.navigation__list-item:first-child {
+    transition: color .2s;
+}
+
+.navigation__list-item:first-child:hover {
+    cursor: pointer;
+    color: var(--purple);
+}
+
 .navigation__list-item:nth-child(3) {
     margin-bottom: 0;
 }
@@ -91,8 +100,4 @@
 
 .navigation__list a:hover {
     color: var(--purple);
-}
-
-@media screen and (max-width: 501px) {
-    
 }
