--- a/css/components/tariffs/main.css
+++ b/css/components/tariffs/main.css
@@ -67,6 +67,12 @@
     border-top: 1px solid rgb(216, 216, 216);
 }
 
+.tariff__promo-text {
+    text-align: center;
+    padding-top: 3rem;
+    border-top: 1px solid rgb(216, 216, 216);
+}
+
 .tariff__price_promo {
     border-top: 1px solid rgb(216, 216, 216);
     padding-top: 1rem;
@@ -173,10 +179,28 @@
     padding: .3rem .5rem;
 }
 
+@media (max-width: 1025px) {
+    .tariffs__tariff {
+        height: 40rem;
+    }
+}
+
+@media screen and (max-width: 769px) {
+    .tariffs__main {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 1.5rem;
+    }
+
+    .tariffs__tariff {
+        width: 100%;
+        height: 35rem;
+    }
+}
+
 @media screen and (max-width: 501px) {
     .tariffs__main {
-        flex-direction: column;
-        align-items: center;
+        grid-template-columns: 1fr;
     }
     
     .tariffs__tariff {
@@ -186,5 +210,9 @@
 
     .tariffs__tariff:last-child {
         margin-bottom: 0;
+    }
+
+    .tariffs__tariff:nth-child(3) {
+        order: -1;
     }
 }
